implement final result page

--- a/src/app/components/dialogs/file-visualization/file-visualization.component.scss
+++ b/src/app/components/dialogs/file-visualization/file-visualization.component.scss
@@ -16,6 +16,8 @@ mat-header-cell {
 
 td, th {
     text-align: center !important;
+    color:black;
+    font-size: inherit;
 }
 
 .mat-row:nth-child(odd) {
