--- a/src/app/components/dialogs/final-result/final-result.component.html
+++ b/src/app/components/dialogs/final-result/final-result.component.html
@@ -1,4 +1,4 @@
-<h2 style="text-align: center;">测试数据表</h2>
+<h2 style="text-align: center;">详细数据表</h2>
 <table mat-table [dataSource]="DatailTableDataSource" matSort  class="mat-elevation-z8">
     <!-- ID Column -->
     <ng-container matColumnDef="PIDName">
@@ -12,7 +12,7 @@
     </ng-container>
 
     <ng-container *ngFor="let concentration of concentrations; let i = index" matColumnDef=  "concentration{{ i + 1}}">
-        <th mat-header-cell *matHeaderCellDef> {{concentrations[i]}}ppm {{concentrations[i] == 0? "(均值,  标准差)": "(均值,  标准差,  SPT,  RPT,  T90)"}} </th>
+        <th mat-header-cell *matHeaderCellDef> {{concentration}}ppm {{i == 0? "(均值 / 标准差)": "(均值 / T90)"}} </th>
         <td mat-cell *matCellDef="let element"> {{element.results[i]}} </td>
     </ng-container>
 
@@ -20,7 +20,7 @@
     <tr mat-row *matRowDef="let row; columns: detailTableDisplayedColumns;"></tr>   
 </table>
 
-<h2 style="text-align: center;">测试结果表</h2>
+<h2 style="text-align: center;">最终结果表</h2>
 <table mat-table [dataSource]="ResultTableDataSource" matSort  class="mat-elevation-z8">
     <!-- ID Column -->
     <ng-container matColumnDef="PIDName">
@@ -29,27 +29,27 @@
     </ng-container>
 
     <ng-container matColumnDef="T90">
-        <th mat-header-cell *matHeaderCellDef> T90 </th>
+        <th mat-header-cell *matHeaderCellDef> Avg T90(s) </th>
         <td mat-cell *matCellDef="let element"> {{element.t90}} </td>
     </ng-container>
 
     <ng-container matColumnDef="RSquare">
         <th mat-header-cell *matHeaderCellDef> R^2 </th>
-        <td mat-cell *matCellDef="let element"> {{element.rsquare}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.RSquare}} </td>
     </ng-container>
 
     <ng-container matColumnDef="range">
-        <th mat-header-cell *matHeaderCellDef> 检测上限 </th>
+        <th mat-header-cell *matHeaderCellDef> 检测上限(ppm) </th>
         <td mat-cell *matCellDef="let element"> {{element.range}} </td>
     </ng-container>
 
     <ng-container matColumnDef="mdl">
-        <th mat-header-cell *matHeaderCellDef> 检测下限 </th>
+        <th mat-header-cell *matHeaderCellDef> 检测下限(ppb) </th>
         <td mat-cell *matCellDef="let element"> {{element.mdl}} </td>
     </ng-container>
 
     <ng-container matColumnDef="sensitivity">
-        <th mat-header-cell *matHeaderCellDef> 灵敏度 </th>
+        <th mat-header-cell *matHeaderCellDef> 灵敏度(mV/ppm) </th>
         <td mat-cell *matCellDef="let element"> {{element.sensitivity}} </td>
     </ng-container>
 
@@ -58,13 +58,23 @@
         <td mat-cell *matCellDef="let element"> {{element.rsd}} </td>
     </ng-container>
 
+  
+    <ng-container matColumnDef="noise">
+        <th mat-header-cell *matHeaderCellDef> 噪声(mv) </th>
+        <td mat-cell *matCellDef="let element"> {{element.noise}} </td>
+    </ng-container>
+
+  
     <ng-container *ngFor="let concentration of concentrations; let i = index" matColumnDef=  "concentration{{ i + 1}}">
-        <th mat-header-cell *matHeaderCellDef> {{concentrations[i]}}ppm </th>
-        <td mat-cell *matCellDef="let element"> {{element.results[i]}} </td>
+        <th mat-header-cell *matHeaderCellDef> {{concentration}}ppm {{i == 0? "(均值 / 标准差 / 变化)": "(均值 / T90 / 下限 / RSD / 变化)"}}</th>
+        <td mat-cell *matCellDef="let element"> {{element.concentrationDetails[i]}} </td>
     </ng-container>
  
     <tr mat-header-row *matHeaderRowDef="resultTableDisplayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: resultTableDisplayedColumns;"></tr>   
 </table>
 
+<div style="margin-left: 45%; margin-right:45%; width:10%; margin-top:40px;">
+    <button mat-raised-button color="warn" (click)="onCloseClick()">Close</button>
+</div>
    
