--- a/src/app/components/dialogs/final-result/final-result.component.scss
+++ b/src/app/components/dialogs/final-result/final-result.component.scss
@@ -2,6 +2,7 @@ table {
     width: 98%;
     margin-left: 1%;
     margin-right: 1%;
+    margin-bottom: 40px;
 }
 
 mat-header-cell {
@@ -16,6 +17,8 @@ mat-header-cell {
 
 td, th {
     text-align: center !important;
+    color:black;
+    font-size: inherit;
 }
 
 .mat-row:nth-child(odd) {
