show concentration on file upload box

--- a/src/app/components/index-page/index-page.component.html
+++ b/src/app/components/index-page/index-page.component.html
@@ -71,6 +71,7 @@
               [testConfig] = "buildTestConfig()"
               [row] = "i + 1"
               [numOfTest] = "j + 1"
+              [concentration] = "concentrationNumberArray[i]"
               [ngStyle]="{width: fileBlockWidth + '%', height:fileBlockHeight + '%'}" 
               style="float: left;"
               (fileChanged)="fileChangedHandler($event, i, j)"
