fix r square issue

--- a/src/app/components/dialogs/file-visualization/file-visualization.component.html
+++ b/src/app/components/dialogs/file-visualization/file-visualization.component.html
@@ -17,13 +17,13 @@
        <!-- Class Column -->>
        <ng-container matColumnDef="mean">
         <th mat-header-cell *matHeaderCellDef > 均值(mV) </th>
-        <td mat-cell *matCellDef="let element"> {{element.mean}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.mean | number: '1.0-0'}} </td>
       </ng-container>
   
       <!-- Part Number Column -->
       <ng-container matColumnDef="std">
         <th mat-header-cell *matHeaderCellDef> 标准差(mV) </th>
-        <td mat-cell *matCellDef="let element"> {{element.std}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.std | number: '1.0-3'}} </td>
       </ng-container>
     
   
@@ -42,7 +42,7 @@
       <!-- Category Column -->
       <ng-container matColumnDef="T90">
           <th mat-header-cell *matHeaderCellDef > T90(s) </th>
-          <td mat-cell *matCellDef="let element"> {{element.T90}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.T90 | number:'1.0-1'}} </td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
