--- a/src/app/components/dialogs/final-result/final-result.component.html
+++ b/src/app/components/dialogs/final-result/final-result.component.html
@@ -61,12 +61,12 @@
   
     <ng-container matColumnDef="noise">
         <th mat-header-cell *matHeaderCellDef> 噪声(mv) </th>
-        <td mat-cell *matCellDef="let element"> {{element.noise}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.noise | number: '1.0-3'}} </td>
     </ng-container>
 
   
     <ng-container *ngFor="let concentration of concentrations; let i = index" matColumnDef=  "concentration{{ i + 1}}">
-        <th mat-header-cell *matHeaderCellDef> {{concentration}}ppm {{i == 0? "(均值 / 标准差 / 变化)": "(均值 / T90 / 下限 / RSD / 变化)"}}</th>
+        <th mat-header-cell *matHeaderCellDef> {{concentration}}ppm {{i == 0? "(均值 / 标准差 / 变化)": (i == 1? "(均值 / T90 / 下限 / RSD / 变化)": "")}}</th>
         <td mat-cell *matCellDef="let element"> {{element.concentrationDetails[i]}} </td>
     </ng-container>
  
