--- a/src/app/components/index-page/index-page.component.html
+++ b/src/app/components/index-page/index-page.component.html
@@ -69,8 +69,9 @@
             <div>
               <app-upload-file-page  *ngFor="let file of subFiles.controls; let j = index" 
               [testConfig] = "buildTestConfig()"
-              [concentration] = "concentrationNumberArray[i]"
+              [row] = "i + 1"
               [numOfTest] = "j + 1"
+              [concentration] = "concentrationNumberArray[i]"
               [ngStyle]="{width: fileBlockWidth + '%', height:fileBlockHeight + '%'}" 
               style="float: left;"
               (fileChanged)="fileChangedHandler($event, i, j)"
