--- a/src/app/components/index-page/index-page.component.scss
+++ b/src/app/components/index-page/index-page.component.scss
@@ -1,6 +1,10 @@
+form {
+  margin-top: 50px;
+}
+
 button {
-    margin-left: 45%;
-    margin-right: 45%;
-    margin-top: 20px;
-    margin-bottom: 30px;
+  margin-left: 45%;
+  margin-right: 45%;
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
