--- a/src/app/components/upload-file-page/upload-file-page.component.html
+++ b/src/app/components/upload-file-page/upload-file-page.component.html
@@ -2,7 +2,7 @@
     <div *ngIf="file; then thenBlock else elseBlock">
     </div>
 
-    <ng-template #thenBlock> 
+    <ng-template #thenBlock class="inner-wrapper"> 
         <div class="file-name"><p>{{file.name}}</p></div> 
         <button mat-icon-button color="accent" (click)="deleteFile()">
             <mat-icon>delete</mat-icon>
@@ -12,7 +12,7 @@
         </button>
     </ng-template>
 
-    <ng-template #elseBlock>
+    <ng-template #elseBlock class="inner-wrapper">
         <input type="file" #fileDropRef id="fileDropRef" (change)="onFileEvent($event.target.files)" />
         <p>浓度值 {{concentration}}, 测试 {{numOfTest}} <br> 拖拽文件,或者</p>
         <label for="fileDropRef">浏览文件夹</label>
