--- a/src/app/components/index-page/index-page.component.html
+++ b/src/app/components/index-page/index-page.component.html
@@ -3,14 +3,14 @@
     <h2>测试参数配置</h2>
     <div class="ms-5">
       <div class="row">
-        <mat-form-field appearance="standard" class="col-sm-5">
+        <mat-form-field appearance="standard" class="col-sm-5" style="text-align: center;">
           <mat-label>PID数量</mat-label>
           <mat-select formControlName="numOfPID" (selectionChange)="pidNumChanged($event)" required>
             <mat-option *ngFor="let numOfPID of possibleNumOfPID" [value]="numOfPID">{{numOfPID}}</mat-option>
           </mat-select>
         </mat-form-field>
 
-        <mat-form-field appearance="standard" class="col-sm-5">
+        <mat-form-field appearance="standard" class="col-sm-5" style="text-align: center;">
           <mat-label>量程</mat-label>
           <mat-select formControlName="range" (selectionChange)="rangeChanged($event)" required>
             <mat-option *ngFor="let range of possibleRange" [value]="range">{{range}}</mat-option>
@@ -20,12 +20,12 @@
 
       <div *ngFor="let pid of pidsForms.controls; let i = index">
         <div [formGroup]="pid" class="row">
-          <mat-form-field appearance="standard" class="col-sm-5">
+          <mat-form-field appearance="standard" class="col-sm-5" style="text-align: center;">
             <mat-label>PID{{i + 1}} 名称</mat-label>
             <input matInput type="text" formControlName="PIDName" required>
           </mat-form-field>
     
-          <mat-form-field appearance="standard" class="col-sm-5">
+          <mat-form-field appearance="standard" class="col-sm-5" style="text-align: center;">
             <mat-label>PID{{i+1}} 信号列数</mat-label>
               <input matInput type="text" formControlName="column" required>
           </mat-form-field>
@@ -35,14 +35,14 @@
 
     <div class="ms-5">
       <div class="row">
-        <mat-form-field appearance="standard" class="col-sm-5">
+        <mat-form-field appearance="standard" class="col-sm-5" style="text-align: center;">
           <mat-label>浓度数量</mat-label>
           <mat-select formControlName="numOfConcentration" (selectionChange)="concentrationNumChanged($event)" required>
             <mat-option *ngFor="let numOfConcentration of possibleNumOfConcentration" [value]="numOfConcentration">{{numOfConcentration}}</mat-option>
           </mat-select>
         </mat-form-field>
 
-        <mat-form-field appearance="standard" class="col-sm-5">
+        <mat-form-field appearance="standard" class="col-sm-5" style="text-align: center;">
           <mat-label>重复测试次数</mat-label>
           <mat-select formControlName="numOfRepeatedTest" (selectionChange)="numOfRepeatedTestChanged($event)" required>
             <mat-option *ngFor="let numOfRepeatedTest of possibleNumOfRepeatedTest" [value]="numOfRepeatedTest">{{numOfRepeatedTest}}</mat-option>
@@ -55,7 +55,7 @@
       <div *ngFor="let concentration of concentrationForms.controls; let i = index">
         <div [formGroup]="concentration" class="container row">
           <span class="col-sm-5 mt-4">浓度 {{i + 1}}</span>
-          <mat-form-field appearance="standard" class="col-sm-5">
+          <mat-form-field appearance="standard" class="col-sm-5" style="text-align: center;">
             <mat-label>浓度值</mat-label>
             <input matInput type="text" formControlName="concentration" required>
           </mat-form-field>
@@ -65,7 +65,7 @@
   </div>
 
   <!-- <div style="width: 70%; height: 90%;"> -->
-  <div class="col-sm-8">
+  <div class="col-sm-8" style="margin-right: 2%">
     <div *ngFor="let subFiles of files.controls; let i = index" fxLayout>  
           <app-upload-file-page  *ngFor="let file of subFiles.controls; let j = index"
           [testConfig] = "buildTestConfig()"
