--- a/src/app/components/dialogs/file-visualization/file-visualization.component.html
+++ b/src/app/components/dialogs/file-visualization/file-visualization.component.html
@@ -44,6 +44,11 @@
           <th mat-header-cell *matHeaderCellDef > T90(s) </th>
           <td mat-cell *matCellDef="let element"> {{element.T90 | number:'1.0-1'}} </td>
       </ng-container>
+
+      <ng-container matColumnDef="T10">
+        <th mat-header-cell *matHeaderCellDef > T10(s) </th>
+        <td mat-cell *matCellDef="let element"> {{element.T10 | number:'1.0-1'}} </td>
+    </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>   
